<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/noteLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/tvNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_page_title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="20dp" />

        <EditText
            android:id="@+id/etNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="12dp"
            android:hint="@string/hint_note_title"
            android:autofillHints="username"
            android:inputType="text" />

        <EditText
            android:id="@+id/etNoteContent"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:minHeight="48dp"
            android:padding="12dp"
            android:hint="@string/hint_note_content"
            android:autofillHints="text"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btnSaveNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/btn_save_note"
            android:layout_marginTop="24dp" />

        <Button
            android:id="@+id/btnBackToHomeFromNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/btn_back_home"
            android:layout_marginTop="12dp" />

    </LinearLayout>
</ScrollView>
